# llmproxy

./: .gitignore  .gitlab-ci.yml  Dockerfile  MANIFEST.in  README.md  compose.yaml  config.toml  llm-billing-proxy.py  pyproject.toml  requirements.txt  sample.js  sample.sql
.github/workflows/: image.yml
examples/: prometheus-alerts.yml  prometheus-scrape.yml
grafana/: dashboard.json
k8s/: podmonitor.yaml  service.yaml  servicemonitor.yaml
llmproxy/: app.py  audio.py  auth.py  billing.py  chat.py  config.py  config.toml  ctl.py  db.py  embeddings.py  messages.py  metrics.py  proxy.py  responses.py  schema.sql  streaming.py
scripts/: llmproxyctl
tests/: mockbackend.py  test_billing_spine.py  test_config.py  test_db.py  test_messages.py  test_proxy.py  test_readuntil.py  test_responses.py
