[build-system]
requires = ["setuptools"]

[project]
name = "llmproxy"
version = "1.3.2"
dependencies = [
	"aiohttp ~= 3.10.9",
	"aiosqlite ~= 0.20.0",
	"yarl ~= 1.13.1",
]

[project.optional-dependencies]
mongo = ["motor ~= 3.5.0", "pymongo ~= 4.6.0"]

[tool.setuptools]
packages = ["llmproxy"]
script-files = ["scripts/llmproxyctl"]
